# calculus

./: CMakeLists.txt  HW.cpp  MainWindow.cpp  MainWindow.h  main.cpp
